--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="Fundo.png" alt="Imagem de funco da galaxia" class="fundo">
     <main class="principal">
         <nav class="container">
             <img src="/logo.png" alt="logo do meu site" class="logo">
